--- a/App/Home/View/Index/showTab.html
+++ b/App/Home/View/Index/showTab.html
@@ -46,9 +46,9 @@
                   <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['name']}</td>
                   <td>{$vo['sex']}</td>
                   <td>{$vo['old']}</td>
-                  <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['phone']}</td>
+                  <td>{$vo['phone']}</td>
                   <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['qq']}</td>
-                  <td>{$vo['expert']}</td>
+                  <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['expert']}</td>
                   <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['desc1']}</td>
                   <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['oldDate']}</td>
                   <td style="white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{$vo['diseases']}</td>
