--- a/App/Home/View/Index/type.html
+++ b/App/Home/View/Index/type.html
@@ -90,18 +90,18 @@
                     }
                 },
                 data:[
-                    {value:{$result[0]}, name:'其他'},
-                    {value:{$result[1]}, name:'阴虱、疥疮'},
-                    {value:{$result[2]}, name:'男科性病'},
-                    {value:{$result[3]}, name:'尿道炎'},
-                    {value:{$result[4]}, name:'精液异常'},
-                    {value:{$result[5]}, name:'射精障碍'},
-                    {value:{$result[6]}, name:'阳痿'},
-                    {value:{$result[7]}, name:'早泄'},
-                    {value:{$result[8]}, name:'前列腺炎'},
-                    {value:{$result[9]}, name:'包皮包茎'},
-                    {value:{$result[10]}, name:'包皮龟头炎'},
-                    {value:{$result[11]}, name:'7月活动'}
+                    {value:{$result['其他']}, name:'其他'},
+                    {value:{$result['阴虱、疥疮']}, name:'阴虱、疥疮'},
+                    {value:{$result['男科性病']}, name:'男科性病'},
+                    {value:{$result['尿道炎']}, name:'尿道炎'},
+                    {value:{$result['精液异常']}, name:'精液异常'},
+                    {value:{$result['射精障碍']}, name:'射精障碍'},
+                    {value:{$result['阳痿']}, name:'阳痿'},
+                    {value:{$result['早泄']}, name:'早泄'},
+                    {value:{$result['前列腺炎']}, name:'前列腺炎'},
+                    {value:{$result['包皮包茎']}, name:'包皮包茎'},
+                    {value:{$result['包皮龟头炎']}, name:'包皮龟头炎'},
+                    {value:{$result['7月活动']}, name:'7月活动'}
                 ]
             }
         ]
